YUK-14189 Engery Company - General Info: Fix Email Address Not Wrapping
- fixed email not wrapping
- improved page layout
- modernized index manager page

--- a/yukon-client/yukon-web/src/com/cannontech/web/common/resources/overrides.less
+++ b/yukon-client/yukon-web/src/com/cannontech/web/common/resources/overrides.less
@@ -49,6 +49,7 @@
 .L0 { left: 0; }
 .lhn { line-height: normal; }
 .M0 { margin: 0 !important; }
+.MR0 { margin-right: 0 !important; }
 .ma { margin: auto; }
 .o0 { opacity: 0; }
 .oa { overflow: auto; }
